# herb

./: .clang-format  .clang-format-ignore  .clang-tidy  .envrc  .gitattributes  .gitignore  .oxlintrc.json  .rubocop.yml  CONTRIBUTING.md  Cargo-all.toml  Gemfile  LICENSE.txt  Makefile  README.md  Rakefile  Steepfile  atomic_rendering.md  config.yml  erbx.gemspec  flake.nix  herb.gemspec  nx.json  package.json  rbs_collection.lock.yaml  rbs_collection.yaml  stargazers-2025-08-23.txt  test.html.erb  workspace.json
config/: options.yml
rust/: Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
rust/herb-config/: Cargo.toml
rust/herb-config/src/: default_config.yml  herb_config.rs  lib.rs  linter_config.rs
rust/herb-config/tests/: herb_config_test.rs  linter_config_test.rs
rust/herb-linter/: Cargo.toml
rust/herb-linter/include/: herb_linter.h
rust/herb-linter/src/: ffi.rs  herb_disable.rs  lib.rs  linter.rs  macros.rs  main.rs  offense.rs  rule.rs
rust/herb-linter/tests/: ffi_test.rs  rules_test.rs
rust/src/: buffer.rs  convert.rs  ffi.rs  herb.rs  lib.rs  location.rs  main.rs  parse_result.rs  range.rs  token.rs  util.rs
rust/tests/: cli_commands_test.rs  error_handling_test.rs  extract_ruby_options_test.rs  node_field_test.rs  parse_result_test.rs  parse_ruby_test.rs  parser_options_test.rs  prism_nodes_deep_test.rs  prism_nodes_test.rs  prism_program_test.rs  tree_inspect_test.rs
rust/tests/snapshots/: parse_ruby_test__parse_ruby_class.snap  parse_ruby_test__parse_ruby_method_definition.snap  parse_ruby_test__parse_ruby_simple_expression.snap  prism_nodes_deep_test__begin_rescue_ensure.snap  prism_nodes_deep_test__case_when.snap  prism_nodes_deep_test__each_block.snap  prism_nodes_deep_test__expression_inside_html.snap  prism_nodes_deep_test__expression_tag_with_string.snap  prism_nodes_deep_test__if_else_statement.snap  prism_nodes_deep_test__if_statement.snap  prism_nodes_deep_test__nested_if_inside_each.snap  prism_nodes_test__begin_rescue.snap  prism_nodes_test__case_when.snap  prism_nodes_test__each_block.snap  prism_nodes_test__expression_inside_html.snap  prism_nodes_test__expression_tag_with_instance_variable.snap  prism_nodes_test__expression_tag_with_method_call.snap  (+16 more)
(+3658 files in other folders)
