[package]
name = "herb"
version = "0.7.5"
edition = "2021"
authors = ["Marco Roth <marco.roth@intergga.ch>"]
description = "Rust bindings for Herb"
license = "MIT"
repository = "https://github.com/marcoroth/herb"

[lib]
name = "herb"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "herb-rs"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
glob = "0.3"
