[package]
name = "herb-config"
version = "0.8.10"
edition = "2021"
authors = ["Marco Roth <marco.roth@intergga.ch>"]
description = "Configuration for Herb (HTML+ERB)"
license = "MIT"
repository = "https://github.com/marcoroth/herb"

[lib]
name = "herb_config"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
